# Management-student/Controller/GiangVien.ts
@@ -7,9 +7,12 @@ import { UpdateGiangVien } from "../Dtos/GiangVien/UpdateGiangVien";
 
 @Route("API/v1/GiangVien")
 @Tags("GiangVien")
+
+// Tạo ra một class chứa các function CRUD để call API và gọi xuống tầng service
 export class GiangVienController extends Controller{
     private services = new GiangVienServices()
 
+    // Hàm dùng để call tới chức năng create giảng viên của service sau đó kiểm tra và thực thi nó
     @Post("CreateGiangVien")
     @Security("bearerAuth")
     @SuccessResponse(201, "Insert giảng viên thành công")
@@ -33,6 +36,7 @@ export class GiangVienController extends Controller{
         }
     }
 
+    // Hàm dùng để call tới chức năng lấy thông tin giảng viên của service sau đó kiểm tra và thực thi nó
     @Get("GetOneGiangVien/{MaSoGiangVien}")
     @Security("bearerAuth")
     @SuccessResponse("200", "Lấy thông tin giảng viên thành công")
@@ -42,7 +46,7 @@ export class GiangVienController extends Controller{
             const getgiangvien = await this.services.TimKiemMotGiangVienTheoMaSo(userRole, MaSoGiangVien)
 
             return {
-                message: "Đã tìm kiếm giảng viên thành công. Thông tin sinh viên: ",
+                message: "Đã tìm kiếm giảng viên thành công. Thông tin giảng viên: ",
                 data: getgiangvien
             }
         } catch (error: any) {
@@ -51,6 +55,7 @@ export class GiangVienController extends Controller{
 
     }
 
+    // Hàm dùng để call tới chức năng lấy thông tin tất cả sinh viên của service sau đó kiểm tra và thực thi nó
     @Get("GetAllGiangVien")
     @Security("bearerAuth")
     @SuccessResponse(200, "Lấy thông tin tất cả giảng viên thành công")
@@ -68,10 +73,11 @@ export class GiangVienController extends Controller{
         }
     }
 
+    // Hàm dùng để call tới chức năng update giảng viên của service sau đó kiểm tra và thực thi nó
     @Put("UpdateOneGiangVien/{MaSoGiangVien}")
     @Security("bearerAuth")
     @SuccessResponse(200, "Cập nhập thông tin giảng viên thành công.")
-    public async UpdateOneSinhVien(@Path() MaSoGiangVien: string, @Body() body: UpdateGiangVien, @Request req: any): Promise<any> {
+    public async UpdateOneGiangVien(@Path() MaSoGiangVien: string, @Body() body: UpdateGiangVien, @Request req: any): Promise<any> {
         const update = plainToInstance(UpdateGiangVien, body)
         const userRole = req.user?.role;
         const checkUpdate = await validate(update)
@@ -80,7 +86,7 @@ export class GiangVienController extends Controller{
             throw new Error(`Lỗi thông tin cập nhập ${JSON.stringify(checkUpdate)}`)
         }
         try {
-            const updategiangvien = this.services.CapNhapThongTinMotGiangVien(userRole, MaSoGiangVien, update)
+            const updategiangvien = await this.services.CapNhapThongTinMotGiangVien(userRole, MaSoGiangVien, update)
 
             return {
                 message: "Đã cập nhập thông tin giảng viên thành công",
@@ -91,13 +97,14 @@ export class GiangVienController extends Controller{
         }
     }
 
+    // Hàm dùng để call tới chức năng xoá thông tin một giảng viên của service sau đó kiểm tra và thực thi nó
     @Delete("DeleteOneGiangVien/{MaSoGiangVien}")
     @Security("bearerAuth")
     @SuccessResponse(200, "Xoá giảng viên thành công.")
     public async DeleteOneSinhVien(@Path() MaSoGiangVien: string, @Request req: any): Promise<any> {
         try {
             const userRole = req.user?.role;
-            const deletegiangvien = await this.services.XoaThongTinMotGiangVien(userRole, MaSoGiangVien)
+            await this.services.XoaThongTinMotGiangVien(userRole, MaSoGiangVien)
             return {
                 message: "Đã xoá giảng viên thành công.",
             }
